--- a/huongdan.html
+++ b/huongdan.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="../stylehd.css">
+    <link rel="stylesheet" href="./stylehd.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +13,10 @@
 <body>
     <div id="menu">
         <ul>
-            <li><a href="../index.html">Trang chủ</a></li>
+            <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="https://www.facebook.com/hoanhan0206">Admin</a></li>
-            <li><a href="../index.html">Hall COC</a>
-            <li><a href="../huongdan.html">Hướng Dẫn</a></li>
+            <li><a href="./index.html">Hall COC</a>
+            <li><a href="./huongdan.html">Hướng Dẫn</a></li>
             <li><a href="https://www.facebook.com/groups/238845453344953/?ref=sharehttps%3A%2F%2Fwww.facebook.com%2Fgroups%2F238845453344953%2F%3Fref%3Dshare&exp=8ce3">Group Admin</a></li>
         </ul>
     </div>
