--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma04.jpg"></div>
-                                <div class="slide"><img src="../images/ma041.jpg"></div>
+                                <div class="slide"><img src="./images/ma04.jpg"></div>
+                                <div class="slide"><img src="./images/ma041.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -46,8 +46,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma07.jpg"></div>
-                                <div class="slide"><img src="../images/ma071.jpg"></div>
+                                <div class="slide"><img src="./images/ma07.jpg"></div>
+                                <div class="slide"><img src="./images/ma071.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -61,8 +61,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma08.jpg"></div>
-                                <div class="slide"><img src="../images/ma081.jpg"></div>
+                                <div class="slide"><img src="./images/ma08.jpg"></div>
+                                <div class="slide"><img src="./images/ma081.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -76,8 +76,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma10.jpg"></div>
-                                <div class="slide"><img src="../images/ma101.jpg"></div>
+                                <div class="slide"><img src="./images/ma10.jpg"></div>
+                                <div class="slide"><img src="./images/ma101.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -91,8 +91,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma11.jpg"></div>
-                                <div class="slide"><img src="../images/ma111.jpg"></div>
+                                <div class="slide"><img src="./images/ma11.jpg"></div>
+                                <div class="slide"><img src="./images/ma111.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -106,8 +106,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma13.jpg"></div>
-                                <div class="slide"><img src="../images/ma131.jpg"></div>
+                                <div class="slide"><img src="./images/ma13.jpg"></div>
+                                <div class="slide"><img src="./images/ma131.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -121,8 +121,8 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/vv.jpg"></div>
-                                <div class="slide"><img src="../images/vv.jpg"></div>
+                                <div class="slide"><img src="./images/vv.jpg"></div>
+                                <div class="slide"><img src="./images/vv.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -139,8 +139,8 @@
                                 <img src="../images/hall 9.jpg" alt="">
                             </a> -->
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="../images/ma02.jpg"></div>
-                                <div class="slide"><img src="../images/ma021.jpg"></div>
+                                <div class="slide"><img src="./images/ma02.jpg"></div>
+                                <div class="slide"><img src="./images/ma021.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
