--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma07.jpg"></div>
-                                <div class="slide"><img src="./images/ma071.jpg"></div>
+                                <div class="slide"><img src="./images/ma14.jpg"></div>
+                                <div class="slide"><img src="./images/ma141.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">250.000đ</a>
-                            <div class="product-price">Mã 07 - Đã SPC ID - Hall 10</div>
+                            <a href="" class="product-cat">150.000đ</a>
+                            <div class="product-price">Mã 14 - Đã SPC ID - Hall 9</div>
                         </div>
                     </div>
                 </li>
@@ -91,14 +91,14 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma11.jpg"></div>
-                                <div class="slide"><img src="./images/ma111.jpg"></div>
+                                <div class="slide"><img src="./images/ma16.jpg"></div>
+                                <div class="slide"><img src="./images/ma161.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">650.000đ</a>
-                            <div class="product-price">Mã 11 - Đã SPC ID - Hall 12</div>
+                            <a href="" class="product-cat">750.000đ</a>
+                            <div class="product-price">Mã 16 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
                 </li>
@@ -121,14 +121,14 @@
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/vv.jpg"></div>
-                                <div class="slide"><img src="./images/vv.jpg"></div>
+                                <div class="slide"><img src="./images/ma17.jpg"></div>
+                                <div class="slide"><img src="./images/ma171.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">000.000đ</a>
-                            <div class="product-price">Đã SPC ID</div>
+                            <a href="" class="product-cat">100.000đ</a>
+                            <div class="product-price">Mã 17 - Đã SPC ID - Hall 9</div>
                         </div>
                     </div>
                 </li>
@@ -147,6 +147,24 @@
                         <div class="product-info">
                             <a href="" class="product-cat">350.000đ</a>
                             <div class="product-price">Mã 02 - Đã SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma18.jpg"></div>
+                                <div class="slide"><img src="./images/ma181.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat">700.000đ</a>
+                            <div class="product-price">Mã 18 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
