--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div class="main_1">
             <p class="main_p">ACC COC Nổi Bật</p>
         </div>
+
         <div id="devil">
             <ul class="products">
                 <li>
@@ -42,6 +43,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -57,6 +59,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -72,6 +75,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -87,6 +91,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -102,6 +107,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -117,6 +123,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -132,6 +139,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -150,6 +158,7 @@
                         </div>
                     </div>
                 </li>
+
                 <li>
                     <div class="product-item">
                         <div class="product-top">
@@ -165,6 +174,25 @@
                         <div class="product-info">
                             <a href="" class="product-cat">700.000đ</a>
                             <div class="product-price">Mã 18 - Đã SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma15.jpg"></div>
+                                <div class="slide"><img src="./images/vv.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat">350.000đ</a>
+                            <div class="product-price">Mã 15 - Đã SPC ID - Hội: Level 11 - HoaMy - Kđ5</div>
                         </div>
                     </div>
                 </li>
