--- a/huongdan.html
+++ b/huongdan.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" href="./images/logo_icon.jpg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -19,6 +21,24 @@
             <li><a href="./huongdan.html">Hướng Dẫn</a></li>
             <li><a href="https://www.facebook.com/groups/238845453344953/?ref=sharehttps%3A%2F%2Fwww.facebook.com%2Fgroups%2F238845453344953%2F%3Fref%3Dshare&exp=8ce3">Group Admin</a></li>
         </ul>
+    </div>
+
+    <div class="hn-1">
+        <table border="0">
+            <tr class="hn-1-1">
+                <td style="text-align: center;">
+                    <marquee direction="left" ; ScrollAmount="20px" ; ScrollDelay=1; BgColor="#fff"
+                        style="margin-top: 20px;">
+                        <i style="font-size: 80px; color: blue;" class="fa-solid fa-truck-monster"></i>
+                        <b>Shop Hòa Nhân: Mua Bán Acc Game Clash Of Clash Uy Tín</b>&nbsp;
+                        <i style="font-size: 80px; color: blue;" class="fa-solid fa-explosion"></i>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="font-size: 25px; color: green; font-family: 'Pacifico', cursive;">SĐT: 0905xxxxxx đã mua 1 tài khoản Giá: 3mxxx cách đây 5 phút</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="font-size: 25px; color: green; font-family: 'Pacifico', cursive;">SĐT: 0942xxxxxx đã mua 1 tài khoản Giá: 1mxxx cách đây 1 giờ</a>
+                    </marquee>
+                </td>
+            </tr>
+        </table>
     </div>
 
     <div class="main">
