--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="icon" href="./images/logo_icon.jpg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./style.css">
@@ -20,6 +22,24 @@
             <li><a href="https://www.facebook.com/groups/238845453344953/?ref=sharehttps%3A%2F%2Fwww.facebook.com%2Fgroups%2F238845453344953%2F%3Fref%3Dshare&exp=8ce3">Group Admin</a></li>
         </ul>
     </div>  
+    
+    <div class="hn-1">
+        <table border="0">
+            <tr class="hn-1-1">
+                <td style="text-align: center;">
+                    <marquee direction="left" ; ScrollAmount="20px" ; ScrollDelay=1; BgColor="#fff"
+                        style="margin-top: 20px;">
+                        <i style="font-size: 80px; color: blue;" class="fa-solid fa-truck-monster"></i>
+                        <b>Shop Hòa Nhân: Mua Bán Acc Game Clash Of Clash Uy Tín</b>&nbsp;
+                        <i style="font-size: 80px; color: blue;" class="fa-solid fa-explosion"></i>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="font-size: 25px; color: green; font-family: 'Pacifico', cursive;">SĐT: 0905xxxxxx đã mua 1 tài khoản Giá: 3mxxx cách đây 5 phút</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="font-size: 25px; color: green; font-family: 'Pacifico', cursive;">SĐT: 0942xxxxxx đã mua 1 tài khoản Giá: 1mxxx cách đây 1 giờ</a>
+                    </marquee>
+                </td>
+            </tr>
+        </table>
+    </div>
     
     <div class="main">
         <div class="main_1">
@@ -56,22 +76,6 @@
                         <div class="product-info">
                             <a href="" class="product-cat">150.000đ</a>
                             <div class="product-price">Mã 14 - Đã SPC ID - Hall 9</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma08.jpg"></div>
-                                <div class="slide"><img src="./images/ma081.jpg"></div>
-                            </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
-                        </div>
-                        <div class="product-info">
-                            <a href="" class="product-cat">250.000đ</a>
-                            <div class="product-price">Mã 08 - Đã SPC ID - Hall 10</div>
                         </div>
                     </div>
                 </li>
