--- a/index.html
+++ b/index.html
@@ -180,10 +180,30 @@
                         </div>
                         <div class="product-info">
                             <a href="" class="product-cat">350.000đ</a>
-                            <div class="product-price">Mã 15 - Đã SPC ID - Hội: Level 11 - HoaMy - Kđ5</div>
+                            <div class="product-price">Mã 15 - Hội: Level 11 - HoaMy - Kđ5</div>
                         </div>
                     </div>
                 </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma19.jpg"></div>
+                                <div class="slide"><img src="./images/ma191.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat">450.000đ</a>
+                            <div class="product-price">Mã 19 - Đã SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
     </div>
