--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <table border="0">
             <tr class="hn-1-1">
                 <td style="text-align: center;">
-                    <marquee direction="left" ; ScrollAmount="15px" ; ScrollDelay=1; BgColor="#fff"
+                    <marquee direction="left" ; ScrollAmount="10px" ; ScrollDelay=1; BgColor="#fff"
                         style="margin-top: 20px;">
                         <i style="font-size: 80px; color: blue;" class="fa-solid fa-truck-monster"></i>
                         <b>Shop Hòa Nhân: Mua Bán Acc Game Clash Of Clash Uy Tín</b>&nbsp;
@@ -174,7 +174,7 @@
                             </a> -->
                             <div class="slide-wrapper">
                                 <div class="slide"><img src="./images/ma15.jpg"></div>
-                                <div class="slide"><img src="./images/vv.jpg"></div>
+                                <div class="slide"><img src="./images/ma151.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
@@ -185,6 +185,24 @@
                     </div>
                 </li>
 
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma20.jpg"></div>
+                                <div class="slide"><img src="./images/ma201.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat">150.000đ</a>
+                            <div class="product-price">Mã 20 - Hội: Level 7 - Bắc Ninh War - Kđ5</div>
+                        </div>
+                    </div>
+                </li>
 
             </ul>
         </div>
