--- a/index.html
+++ b/index.html
@@ -182,8 +182,46 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">400.000đ</a>
+                            <a href="" class="product-cat">600.000đ</a>
                             <div class="product-price">Mã 21 - Đã SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma22.jpg"></div>
+                                <div class="slide"><img src="./images/ma221.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat">450.000đ</a>
+                            <div class="product-price">Mã 22 - Đã SPC ID - Hall 11</div>
+                        </div>
+                    </div>
+                </li>
+
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <!-- <a href="" class="product-thumb">
+                                <img src="../images/hall 9.jpg" alt="">
+                            </a> -->
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma23.jpg"></div>
+                                <div class="slide"><img src="./images/ma231.jpg"></div>
+                            </div>
+                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat">700.000đ</a>
+                            <div class="product-price">Mã 23 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
                 </li>
