--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="./images/logo_icon.jpg">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.leanhduc.pro.vn/utilities/animation/shake-effect/style.css"/>
     <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,7 +59,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">150.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 04 - Đã SPC ID - Hall 9</div>
                         </div>
                     </div>
@@ -74,7 +75,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">150.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 14 - Đã SPC ID - Hall 9</div>
                         </div>
                     </div>
@@ -90,7 +91,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">750.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 750.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 16 - Đã SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -106,7 +107,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">1.100.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.100.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 13 - Đã SPC ID - Hall 15</div>
                         </div>
                     </div>
@@ -125,7 +126,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">700.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 700.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 18 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -144,7 +145,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">350.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 350.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 15 - Hội: Level 11 - HoaMy - Kđ5</div>
                         </div>
                     </div>
@@ -163,7 +164,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">150.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 20 - Hội: Level 7 - Bắc Ninh War - Kđ5</div>
                         </div>
                     </div>
@@ -182,27 +183,8 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">600.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 600.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 21 - Đã SPC ID - Hall 13</div>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="product-item">
-                        <div class="product-top">
-                            <!-- <a href="" class="product-thumb">
-                                <img src="../images/hall 9.jpg" alt="">
-                            </a> -->
-                            <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma22.jpg"></div>
-                                <div class="slide"><img src="./images/ma221.jpg"></div>
-                            </div>
-                            <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
-                        </div>
-                        <div class="product-info">
-                            <a href="" class="product-cat">450.000đ</a>
-                            <div class="product-price">Mã 22 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
                 </li>
@@ -220,7 +202,7 @@
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat">700.000đ</a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 700.000đ <i class="fa-solid fa-heart rung"></i></i></a>
                             <div class="product-price">Mã 23 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -230,6 +212,7 @@
         </div>
     </div>
 
+    <div class="rung"></div>
     <footer>
         <p>© 2022 Copyright: Hòa Nhân</p>
     </footer>
