--- a/index.html
+++ b/index.html
@@ -215,14 +215,14 @@
                                 <img src="../images/hall 9.jpg" alt="">
                             </a> -->
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma24.jpg"></div>
-                                <div class="slide"><img src="./images/ma241.jpg"></div>
+                                <div class="slide"><img src="./images/ma25.jpg"></div>
+                                <div class="slide"><img src="./images/ma251.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 450.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 24 - Đã SPC ID - Hall 14</div>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.400.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 25 - Đã SPC ID - Hall 15</div>
                         </div>
                     </div>
                 </li>
@@ -234,14 +234,14 @@
                                 <img src="../images/hall 9.jpg" alt="">
                             </a> -->
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma25.jpg"></div>
-                                <div class="slide"><img src="./images/ma251.jpg"></div>
+                                <div class="slide"><img src="./images/ma26.jpg"></div>
+                                <div class="slide"><img src="./images/ma261.jpg"></div>
                             </div>
                             <a href="https://www.facebook.com/hoanhan0206/" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 1.400.000đ <i class="fa-solid fa-heart rung"></i></i></a>
-                            <div class="product-price">Mã 25 - Đã SPC ID - Hall 15</div>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i></i> 150.000đ <i class="fa-solid fa-heart rung"></i></i></a>
+                            <div class="product-price">Mã 26 - Hội: Level 6 - tao BẤT BẠI - Kđ5</div>
                         </div>
                     </div>
                 </li>
