--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             <tr class="hn-1-1">
                 <td style="text-align: center;">
                     <marquee direction="left" ; ScrollAmount="10px" ; ScrollDelay=1; BgColor="#fff"
-                        style="margin-top: 20px;">
+                        style="margin-top: 20px; background-color: rgb(8, 241, 8);">
                         <i style="font-size: 80px; color: blue;" class="fa-solid fa-truck-monster"></i>
                         <b>Shop Hòa Nhân: Mua Bán Acc Game Clash Of Clash Uy Tín</b>&nbsp;
                         <i style="font-size: 80px; color: blue;" class="fa-solid fa-explosion"></i>
                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a style="font-size: 25px; color: green; font-family: 'Pacifico', cursive;">SĐT: 0905xxxxxx đã mua 1 tài khoản Giá: 3mxxx cách đây 5 phút</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a style="font-size: 25px; color: green; font-family: 'Pacifico', cursive;">SĐT: 0942xxxxxx đã mua 1 tài khoản Giá: 1mxxx cách đây 1 giờ</a>
+                        <a style="font-size: 25px; color: #000; font-family: 'Pacifico', cursive;">SĐT: 0905xxxxxx đã mua 1 tài khoản Giá: 3mxxx cách đây 5 phút</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a style="font-size: 25px; color: #000; font-family: 'Pacifico', cursive;">SĐT: 0942xxxxxx đã mua 1 tài khoản Giá: 1mxxx cách đây 1 giờ</a>
                     </marquee>
                 </td>
             </tr>
